[package]
name = "polarsteps-unpacker-tauri"
version = "0.0.1"
description = "PolarSteps Unpacker"
authors = ["Martin Deppe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
docx-rs = "0.4.17"
log = "0.4"
tauri-plugin-log = { version = "2" }
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
